# shmem_poc

./: CMakeLists.txt  README.md
algo_svc/: CMakeLists.txt  Dockerfile  ShmDataSender.cpp  ShmDataSender.h  main.cpp
common/: DataEnvelope.h  ShmDataExchDefs.h  ShmDataReceiver.cpp  ShmDataReceiver.h  ShmDataSender.cpp  ShmDataSender.h
sync_poc/: CMakeLists.txt  main.cpp
video_svc/: CMakeLists.txt  Dockerfile  ShmDataReceiver.cpp  ShmDataReceiver.h  main.cpp
